syntax = "proto3";
package fitglue;

option go_package = "github.com/fitglue/server/src/go/pkg/types/pb";

// PluginType categorizes plugins
enum PluginType {
  PLUGIN_TYPE_UNSPECIFIED = 0;
  PLUGIN_TYPE_SOURCE = 1;
  PLUGIN_TYPE_ENRICHER = 2;
  PLUGIN_TYPE_DESTINATION = 3;
}

// PluginManifest defines metadata for any plugin
message PluginManifest {
  string id = 1;                              // Unique identifier (e.g., "hevy", "fitbit-hr", "strava")
  PluginType type = 2;                        // Source, Enricher, or Destination
  string name = 3;                            // Human-readable name
  string description = 4;                     // Short description
  string icon = 5;                            // Emoji or icon name
  repeated ConfigFieldSchema config_schema = 6;  // Configuration fields
  repeated string required_integrations = 7;   // e.g., ["fitbit"] requires Fitbit connected
  bool enabled = 8;                           // Whether this plugin is available

  // For enrichers: links to the EnricherProviderType enum value
  optional int32 enricher_provider_type = 9;
  // For destinations: links to the Destination enum value
  optional int32 destination_type = 10;

  // Marketing metadata
  string marketing_description = 11;          // Extended description for marketing site (markdown supported)
  repeated string features = 12;              // List of features/capabilities to display
  repeated Transformation transformations = 13; // Before/after examples showing what the plugin does
  repeated string use_cases = 14;             // List of use cases (e.g., "Share detailed workout logs")

  // URL template for linking to external activities. Use {id} placeholder.
  // For internal destinations like Showcase, server injects env-specific base URL.
  optional string external_url_template = 15;
  // Required tier to use this plugin (e.g., "pro" for Athlete-only features)
  optional string required_tier = 16;

  // UX Organization fields
  optional string category = 17;              // For grouping (e.g., "wearables", "stats", "detection")
  optional int32 sort_order = 18;             // Ordering within category (lower = first)
  optional bool is_premium = 19;              // Display premium badge (Athlete-tier)
  optional int32 popularity_score = 20;       // For "recommended" sorting in wizard

  // SVG Icon support (for products with real logos)
  optional string icon_type = 21;             // "emoji" (default) or "svg"
  optional string icon_path = 22;             // Path to SVG asset (e.g., "/assets/icons/strava.svg")

  // When true, plugin is hidden from app but still shown on marketing site with "Coming Soon" indicator
  optional bool is_temporarily_unavailable = 23;
}

// Transformation shows a before/after example of what a plugin does to a field
message Transformation {
  string field = 1;                           // Field being transformed (e.g., "description", "gpsData")
  string label = 2;                           // Human-readable label (e.g., "Activity Description")
  string before = 3;                          // Example value before transformation
  string after = 4;                           // Example value after transformation
  string visual_type = 5;                     // Visual rendering type (e.g., "hr-graph", "gps-map") - if set, renders SVG instead of text
  string after_html = 6;                      // Pre-formatted HTML for after state (used instead of after when set)
}


// ConfigFieldSchema defines a single configuration field
message ConfigFieldSchema {
  string key = 1;                             // Field key in config map
  string label = 2;                           // Human-readable label
  string description = 3;                     // Help text
  ConfigFieldType field_type = 4;             // Type of input
  bool required = 5;                          // Whether field is required
  string default_value = 6;                   // Default value (as string)
  repeated ConfigFieldOption options = 7;     // For SELECT/MULTI_SELECT types
  ConfigFieldValidation validation = 8;       // Validation rules
  optional ConfigFieldDependency depends_on = 9;  // Show only when dependency is met
  // For KEY_VALUE_MAP: independent options for left (key) and right (value) sides
  // If set, renders a dropdown instead of text input for that side
  repeated ConfigFieldOption key_options = 10;    // Options for the left side (key)
  repeated ConfigFieldOption value_options = 11;  // Options for the right side (value)
  // For DYNAMIC_SELECT: identifier for which endpoint to fetch options from
  optional string dynamic_source = 12;            // e.g., "user_counters" - UI fetches from /users/me/{dynamic_source}
}

// ConfigFieldDependency defines when a field should be visible
message ConfigFieldDependency {
  string field_key = 1;        // Key of the field this depends on
  repeated string values = 2;  // Show when dependent field has one of these values
}

enum ConfigFieldType {
  CONFIG_FIELD_TYPE_UNSPECIFIED = 0;
  CONFIG_FIELD_TYPE_STRING = 1;
  CONFIG_FIELD_TYPE_NUMBER = 2;
  CONFIG_FIELD_TYPE_BOOLEAN = 3;
  CONFIG_FIELD_TYPE_SELECT = 4;               // Dropdown
  CONFIG_FIELD_TYPE_MULTI_SELECT = 5;         // Multiple selection
  CONFIG_FIELD_TYPE_KEY_VALUE_MAP = 6;        // Record<string, string> map - stored as JSON
  CONFIG_FIELD_TYPE_DYNAMIC_SELECT = 7;       // Dropdown with options fetched from API + allows new entry
}

message ConfigFieldOption {
  string value = 1;                           // Stored value (descriptive string)
  string label = 2;                           // Display label
}

message ConfigFieldValidation {
  optional int32 min_length = 1;
  optional int32 max_length = 2;
  optional string pattern = 3;                // Regex pattern
  optional double min_value = 4;
  optional double max_value = 5;
}

// IntegrationAuthType defines how users authenticate with an integration
enum IntegrationAuthType {
  INTEGRATION_AUTH_TYPE_UNSPECIFIED = 0;
  INTEGRATION_AUTH_TYPE_OAUTH = 1;
  INTEGRATION_AUTH_TYPE_API_KEY = 2;
  INTEGRATION_AUTH_TYPE_APP_SYNC = 3;  // Mobile app handles auth (Apple Health, Health Connect)
  INTEGRATION_AUTH_TYPE_PUBLIC_ID = 4; // Public identifier (no secrets, no ingress key needed)
}

// IntegrationManifest defines metadata for external service integrations
message IntegrationManifest {
  string id = 1;                              // Unique identifier (e.g., "hevy", "fitbit", "strava")
  string name = 2;                            // Human-readable name
  string description = 3;                     // Short description
  string icon = 4;                            // Emoji or icon name
  IntegrationAuthType auth_type = 5;          // How users connect
  bool enabled = 6;                           // Whether this integration is available
  string docs_url = 7;                        // Link to setup guide
  // Setup configuration
  string setup_title = 8;                     // Modal title e.g., "Connect Hevy"
  string setup_instructions = 9;              // Markdown-formatted setup steps
  string api_key_label = 10;                  // Label for API key input e.g., "API Key"
  string api_key_help_url = 11;               // URL where user gets the key
  // Marketing metadata
  string marketing_description = 12;          // Extended description for marketing site (markdown)
  repeated string features = 13;              // List of features/capabilities

  // SVG Icon support (for products with real logos)
  optional string icon_type = 15;             // "emoji" (default), "svg", "png", or "jpg"
  optional string icon_path = 16;             // Path to icon asset (e.g., "/images/icons/strava.svg")


  // When true, integration is hidden from connections page but shown on marketing with "Coming Soon"
  optional bool is_temporarily_unavailable = 14;
}

// PluginRegistryResponse for API discovery
message PluginRegistryResponse {
  repeated PluginManifest sources = 1;
  repeated PluginManifest enrichers = 2;
  repeated PluginManifest destinations = 3;
  repeated IntegrationManifest integrations = 4;
}
